# rust-zaim

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: bump-patch-version.yml  release-please.yml  release.yml
src/: constants.rs  lib.rs  main.rs  types.rs  zaim.rs
src/client/: mod.rs
src/models/: me.rs
src/types/: default.rs  home.rs  me.rs
src/types/default/: account.rs  category.rs  currency.rs  genre.rs
src/types/home/: account.rs  category.rs  genre.rs
src/zaim/: account.rs  category.rs  client.rs  currency.rs  dotenv.rs  genre.rs  me.rs  request.rs
tests/: me_test.rs  mock.rs
