[package]
name = "rust-zaim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11.13", features = ["blocking","json"] }
reqwest-oauth1 = "0.2.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
