[package]
name = "zaim"
version = "0.2.0"
authors = ["ryohidaka <39184410+ryohidaka@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "rust-zaim is a Rust client library for the Zaim API"

repository = "https://github.com/ryohidaka/rust-zaim"

readme = "README.md"

keywords = ["zaim"]
categories = ["command-line-utilities", "web-programming::http-client"]
license = "MIT"

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.12.1", features = ["json"] }
reqwest-oauth1 = "0.2.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }

[dev-dependencies]
mockito = "1.2.0"
